--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytes = "1.6.0"
 clap = { version = "4.5.4", features = ["derive", "env"] }
+http-body-util = "0.1.1"
+hyper = { version = "1.2.0", features = ["full"] }
+hyper-util = { version = "0.1.3", features = ["full"] }
+tokio = { version = "1.37.0", features = ["full"] }
+chrono = "0.4.37"
+log = "0.4.0"
+pretty_env_logger = "0.5.0"
